--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "dotenv": "^16.4.5",
+    "framer-motion": "^11.3.19",
     "lenis": "^1.1.8",
     "next": "14.2.4",
     "react": "^18",
