--- a/package.json
+++ b/package.json
@@ -9,13 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@stripe/stripe-js": "^4.1.0",
     "dotenv": "^16.4.5",
     "lenis": "^1.1.8",
-    "next": "14.2.4",
+    "next": "^14.2.4",
     "react": "^18",
     "react-dom": "^18",
     "react-markdown": "^8.0.6",
     "sharp": "^0.33.4",
+    "stripe": "^16.6.0",
     "swiper": "^11.1.4"
   },
   "devDependencies": {
